@@ -6,6 +6,8 @@
 
 package io.kroxylicious.proxy.internal;
 
+import java.util.Collection;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -21,9 +23,10 @@ import io.kroxylicious.proxy.service.HostPort;
 /**
  * Detects potential for port conflicts arising between virtual cluster configurations.
  */
+@SuppressWarnings("OptionalUsedAsFieldOrParameterType")
 public class PortConflictDetector {
 
-    private final static Optional<String> ANY_INTERFACE = Optional.empty();
+    private static final Optional<String> ANY_INTERFACE = Optional.empty();
     private static final String ANY_STRING = "<any>";
 
     private enum BindingScope {
@@ -37,110 +40,139 @@ public class PortConflictDetector {
      * @param virtualClusterMap map of virtual clusters.
      * @param otherExclusivePort an optional exclusive port that should conflict with virtual cluster ports
      */
-    public void validate(Map<String, VirtualCluster> virtualClusterMap, Optional<HostPort> otherExclusivePort) {
+    public void validate(Collection<VirtualCluster> virtualClusterMap, Optional<HostPort> otherExclusivePort) {
 
         Set<String> seenVirtualClusters = new HashSet<>();
 
         Map<Optional<String>, Set<Integer>> inUseExclusivePorts = new HashMap<>();
         Map<Optional<String>, Map<Integer, Boolean>> inUseSharedPorts = new HashMap<>();
 
-        virtualClusterMap.entrySet().stream().sorted(Map.Entry.comparingByKey()).forEach(e -> {
-            var name = e.getKey();
-            var cluster = e.getValue();
-            var proposedSharedPorts = cluster.getSharedPorts();
-            var proposedExclusivePorts = cluster.getExclusivePorts();
+        virtualClusterMap.stream()
+                .sorted(Comparator.comparing(VirtualCluster::getClusterName))
+                .forEach(virtualCluster -> {
+                    var name = virtualCluster.getClusterName();
+                    var proposedSharedPorts = virtualCluster.getSharedPorts();
+                    var proposedExclusivePorts = virtualCluster.getExclusivePorts();
 
-            if (otherExclusivePort.isPresent()) {
-                Optional<String> otherInterface = otherExclusivePort.map(hostPort -> hostPort.host().equals("0.0.0.0") ? null : hostPort.host());
-                var checkPorts = cluster.getBindAddress().isEmpty() || otherInterface.isEmpty() || cluster.getBindAddress().equals(otherInterface);
-                if (checkPorts) {
-                    checkForConflictsWithOtherExclusivePort(otherExclusivePort.get(), name, cluster, proposedExclusivePorts, BindingScope.EXCLUSIVE);
-                    checkForConflictsWithOtherExclusivePort(otherExclusivePort.get(), name, cluster, proposedSharedPorts, BindingScope.SHARED);
-                }
+                    if (otherExclusivePort.isPresent()) {
+                        Optional<String> otherInterface = otherExclusivePort.map(hostPort -> hostPort.host().equals("0.0.0.0") ? null : hostPort.host());
+                        var checkPorts = virtualCluster.getBindAddress().isEmpty() || otherInterface.isEmpty() || virtualCluster.getBindAddress().equals(otherInterface);
+                        if (checkPorts) {
+                            checkForConflictsWithOtherExclusivePort(otherExclusivePort.get(), name, virtualCluster, proposedExclusivePorts, BindingScope.EXCLUSIVE);
+                            checkForConflictsWithOtherExclusivePort(otherExclusivePort.get(), name, virtualCluster, proposedSharedPorts, BindingScope.SHARED);
+                        }
+                    }
+
+                    // if this virtual cluster is binding to <any>, we need to check for conflicts on the <any> interface and *all* specific interfaces,
+                    // otherwise we just check for conflicts on <any> and the specified specific interface
+                    var exclusiveCheckSet = virtualCluster.getBindAddress().isEmpty() ? inUseExclusivePorts.keySet()
+                            : Set.of(ANY_INTERFACE, virtualCluster.getBindAddress());
+
+                    // check the proposed *exclusive ports* for conflicts with the *exclusive ports* seen so far.
+                    assertExclusivePortsAreMutuallyExclusive(seenVirtualClusters, inUseExclusivePorts, virtualCluster, name, proposedExclusivePorts, exclusiveCheckSet);
+
+                    // check the proposed *shared ports* for conflicts with the *exclusive ports* seen so far.
+                    assertSharedPortsDoNotOverlapWithExlusivePorts(seenVirtualClusters, inUseExclusivePorts, virtualCluster, name, proposedSharedPorts,
+                            exclusiveCheckSet);
+
+                    // check the proposed *exclusive ports* for conflicts with the *shared ports* seen so far.
+                    assertExclusivePortsDoNotOverlapWithExclusivePorts(seenVirtualClusters, inUseSharedPorts, virtualCluster, name, proposedExclusivePorts,
+                            exclusiveCheckSet);
+
+                    // check the proposed *shared ports* for conflicts with the shared ports seen so far on *different* interfaces.
+                    assertSharedPortsAreExclusiveAcrossInterfaces(seenVirtualClusters, inUseSharedPorts, virtualCluster, name, proposedSharedPorts, exclusiveCheckSet);
+
+                    // check for proposed shared ports for differing TLS configuration
+                    assertSharedPortsHaveMatchingTlsConfiguration(seenVirtualClusters, inUseSharedPorts, virtualCluster, name, proposedSharedPorts);
+
+                    seenVirtualClusters.add(name);
+                    inUseExclusivePorts.computeIfAbsent(virtualCluster.getBindAddress(), k -> new HashSet<>()).addAll(proposedExclusivePorts);
+                    var sharedMap = inUseSharedPorts.computeIfAbsent(virtualCluster.getBindAddress(), k -> new HashMap<>());
+                    proposedSharedPorts.forEach(p -> sharedMap.put(p, virtualCluster.isUseTls()));
+
+                });
+    }
+
+    private void assertSharedPortsHaveMatchingTlsConfiguration(Set<String> seenVirtualClusters, Map<Optional<String>, Map<Integer, Boolean>> inUseSharedPorts,
+                                                               VirtualCluster virtualCluster, String name,
+                                                               Set<Integer> proposedSharedPorts) {
+        proposedSharedPorts.forEach(p -> {
+            var tls = inUseSharedPorts.getOrDefault(virtualCluster.getBindAddress(), Map.of()).get(p);
+            if (tls != null && !tls.equals(virtualCluster.isUseTls())) {
+                throw buildOverviewException(name, seenVirtualClusters, buildTlsConflictException(p, virtualCluster.getBindAddress()));
             }
-
-            // if this virtual cluster is binding to <any>, we need to check for conflicts on the <any> interface and *all* specific interfaces,
-            // otherwise we just check for conflicts on <any> and the specified specific interface
-            var exclusiveCheckSet = cluster.getBindAddress().isEmpty() ? inUseExclusivePorts.keySet() : Set.of(ANY_INTERFACE, cluster.getBindAddress());
-
-            // check the proposed *exclusive ports* for conflicts with the *exclusive ports* seen so far.
-
-            inUseExclusivePorts.entrySet().stream()
-                    .filter(interfacePortsEntry -> exclusiveCheckSet.contains(interfacePortsEntry.getKey()))
-                    .forEach((entry) -> {
-                        var bindingInterface = entry.getKey();
-                        var ports = entry.getValue();
-                        var conflicts = getSortedPortConflicts(ports, proposedExclusivePorts);
-                        if (!conflicts.isEmpty()) {
-                            throw buildPortConflictException(name, seenVirtualClusters, conflicts,
-                                    cluster.getBindAddress(), BindingScope.EXCLUSIVE,
-                                    bindingInterface, BindingScope.EXCLUSIVE);
-                        }
-                    });
-
-            // check the proposed *shared ports* for conflicts with the *exclusive ports* seen so far.
-
-            inUseExclusivePorts.entrySet().stream()
-                    .filter(interfacePortsEntry -> exclusiveCheckSet.contains(interfacePortsEntry.getKey()))
-                    .forEach((entry) -> {
-                        var bindingInterface = entry.getKey();
-                        var ports = entry.getValue();
-                        var conflicts = getSortedPortConflicts(ports, proposedSharedPorts);
-                        if (!conflicts.isEmpty()) {
-                            throw buildPortConflictException(name, seenVirtualClusters, conflicts,
-                                    cluster.getBindAddress(), BindingScope.SHARED,
-                                    bindingInterface, BindingScope.EXCLUSIVE);
-                        }
-                    });
-
-            // check the proposed *exclusive ports* for conflicts with the *shared ports* seen so far.
-
-            inUseSharedPorts.entrySet().stream()
-                    .filter(interfacePortsEntry -> exclusiveCheckSet.contains(interfacePortsEntry.getKey()))
-                    .forEach((entry) -> {
-                        var bindingInterface = entry.getKey();
-                        var ports = entry.getValue().keySet();
-                        var conflicts = getSortedPortConflicts(ports, proposedExclusivePorts);
-                        if (!conflicts.isEmpty()) {
-                            throw buildPortConflictException(name, seenVirtualClusters, conflicts,
-                                    cluster.getBindAddress(), BindingScope.EXCLUSIVE,
-                                    bindingInterface, BindingScope.SHARED);
-                        }
-                    });
-
-            // check the proposed *shared ports* for conflicts with the shared ports seen so far on *different* interfaces.
-
-            var sharedCheckSet = new HashSet<>(exclusiveCheckSet);
-            sharedCheckSet.remove(cluster.getBindAddress());
-
-            inUseSharedPorts.entrySet().stream()
-                    .filter(interfacePortsEntry -> sharedCheckSet.contains(interfacePortsEntry.getKey()))
-                    .forEach((entry) -> {
-                        var bindingInterface = entry.getKey();
-                        var ports = entry.getValue().keySet();
-                        var conflicts = getSortedPortConflicts(ports, proposedSharedPorts);
-                        if (!conflicts.isEmpty()) {
-                            throw buildPortConflictException(name, seenVirtualClusters, conflicts,
-                                    cluster.getBindAddress(), BindingScope.SHARED,
-                                    bindingInterface, BindingScope.SHARED);
-                        }
-                    });
-
-            // check for proposed shared ports for differing TLS configuration
-
-            proposedSharedPorts.forEach(p -> {
-                var tls = inUseSharedPorts.getOrDefault(cluster.getBindAddress(), Map.of()).get(p);
-                if (tls != null && !tls.equals(cluster.isUseTls())) {
-                    throw buildOverviewException(name, seenVirtualClusters, buildTlsConflictException(p, cluster.getBindAddress()));
-                }
-            });
-
-            seenVirtualClusters.add(name);
-            inUseExclusivePorts.computeIfAbsent(cluster.getBindAddress(), (k) -> new HashSet<>()).addAll(proposedExclusivePorts);
-            var sharedMap = inUseSharedPorts.computeIfAbsent(cluster.getBindAddress(), (k) -> new HashMap<>());
-            proposedSharedPorts.forEach(p -> sharedMap.put(p, cluster.isUseTls()));
-
         });
+    }
+
+    private void assertSharedPortsAreExclusiveAcrossInterfaces(Set<String> seenVirtualClusters, Map<Optional<String>, Map<Integer, Boolean>> inUseSharedPorts,
+                                                               VirtualCluster virtualCluster, String name,
+                                                               Set<Integer> proposedSharedPorts, Set<Optional<String>> exclusiveCheckSet) {
+        var sharedCheckSet = new HashSet<>(exclusiveCheckSet);
+        sharedCheckSet.remove(virtualCluster.getBindAddress());
+
+        inUseSharedPorts.entrySet().stream()
+                .filter(interfacePortsEntry -> sharedCheckSet.contains(interfacePortsEntry.getKey()))
+                .forEach(entry -> {
+                    var bindingInterface = entry.getKey();
+                    var ports = entry.getValue().keySet();
+                    var conflicts = getSortedPortConflicts(ports, proposedSharedPorts);
+                    if (!conflicts.isEmpty()) {
+                        throw buildPortConflictException(name, seenVirtualClusters, conflicts,
+                                virtualCluster.getBindAddress(), BindingScope.SHARED,
+                                bindingInterface, BindingScope.SHARED);
+                    }
+                });
+    }
+
+    private void assertExclusivePortsDoNotOverlapWithExclusivePorts(Set<String> seenVirtualClusters, Map<Optional<String>, Map<Integer, Boolean>> inUseSharedPorts,
+                                                                    VirtualCluster virtualCluster, String name,
+                                                                    Set<Integer> proposedExclusivePorts, Set<Optional<String>> exclusiveCheckSet) {
+        inUseSharedPorts.entrySet().stream()
+                .filter(interfacePortsEntry -> exclusiveCheckSet.contains(interfacePortsEntry.getKey()))
+                .forEach(entry -> {
+                    var bindingInterface = entry.getKey();
+                    var ports = entry.getValue().keySet();
+                    var conflicts = getSortedPortConflicts(ports, proposedExclusivePorts);
+                    if (!conflicts.isEmpty()) {
+                        throw buildPortConflictException(name, seenVirtualClusters, conflicts,
+                                virtualCluster.getBindAddress(), BindingScope.EXCLUSIVE,
+                                bindingInterface, BindingScope.SHARED);
+                    }
+                });
+    }
+
+    private void assertSharedPortsDoNotOverlapWithExlusivePorts(Set<String> seenVirtualClusters, Map<Optional<String>, Set<Integer>> inUseExclusivePorts,
+                                                                VirtualCluster virtualCluster, String name,
+                                                                Set<Integer> proposedSharedPorts, Set<Optional<String>> exclusiveCheckSet) {
+        inUseExclusivePorts.entrySet().stream()
+                .filter(interfacePortsEntry -> exclusiveCheckSet.contains(interfacePortsEntry.getKey()))
+                .forEach(entry -> {
+                    var bindingInterface = entry.getKey();
+                    var ports = entry.getValue();
+                    var conflicts = getSortedPortConflicts(ports, proposedSharedPorts);
+                    if (!conflicts.isEmpty()) {
+                        throw buildPortConflictException(name, seenVirtualClusters, conflicts,
+                                virtualCluster.getBindAddress(), BindingScope.SHARED,
+                                bindingInterface, BindingScope.EXCLUSIVE);
+                    }
+                });
+    }
+
+    private void assertExclusivePortsAreMutuallyExclusive(Set<String> seenVirtualClusters, Map<Optional<String>, Set<Integer>> inUseExclusivePorts,
+                                                          VirtualCluster virtualCluster, String name,
+                                                          Set<Integer> proposedExclusivePorts, Set<Optional<String>> exclusiveCheckSet) {
+        inUseExclusivePorts.entrySet().stream()
+                .filter(interfacePortsEntry -> exclusiveCheckSet.contains(interfacePortsEntry.getKey()))
+                .forEach(entry -> {
+                    var bindingInterface = entry.getKey();
+                    var ports = entry.getValue();
+                    var conflicts = getSortedPortConflicts(ports, proposedExclusivePorts);
+                    if (!conflicts.isEmpty()) {
+                        throw buildPortConflictException(name, seenVirtualClusters, conflicts,
+                                virtualCluster.getBindAddress(), BindingScope.EXCLUSIVE,
+                                bindingInterface, BindingScope.EXCLUSIVE);
+                    }
+                });
     }
 
     private void checkForConflictsWithOtherExclusivePort(HostPort otherHostPort, String name, VirtualCluster cluster, Set<Integer> proposedExclusivePorts,
@@ -151,7 +183,7 @@ public class PortConflictDetector {
             Optional<String> proposedBindingInterface = cluster.getBindAddress();
             var portConflicts = conflicts.stream().map(String::valueOf).collect(Collectors.joining(","));
 
-            throw new IllegalStateException(("The %s bind of port(s) %s for virtual cluster '%s' to %s would conflict with another (non-cluster) port binding").formatted(
+            throw new IllegalStateException("The %s bind of port(s) %s for virtual cluster '%s' to %s would conflict with another (non-cluster) port binding".formatted(
                     scope.name().toLowerCase(Locale.ROOT),
                     portConflicts,
                     name,
@@ -160,7 +192,7 @@ public class PortConflictDetector {
     }
 
     private List<Integer> getSortedPortConflicts(Set<Integer> ports, Set<Integer> candidates) {
-        return ports.stream().filter(candidates::contains).sorted().collect(Collectors.toList());
+        return ports.stream().filter(candidates::contains).sorted().toList();
     }
 
     private IllegalStateException buildPortConflictException(String virtualClusterName, Set<String> seenVirtualClusters, List<Integer> conflicts,
@@ -168,7 +200,7 @@ public class PortConflictDetector {
                                                              Optional<String> existingBindingInterface, BindingScope existingBindingScope) {
         var portConflicts = conflicts.stream().map(String::valueOf).collect(Collectors.joining(","));
 
-        var underlying = new IllegalStateException(("The %s bind of port(s) %s to %s would conflict with existing %s port bindings on %s.").formatted(
+        var underlying = new IllegalStateException("The %s bind of port(s) %s to %s would conflict with existing %s port bindings on %s.".formatted(
                 proposedScope.name().toLowerCase(Locale.ROOT),
                 portConflicts,
                 proposedBindingInterface.orElse(ANY_STRING),
